Fix z-index home page

--- a/app/containers/HomePage/style.scss
+++ b/app/containers/HomePage/style.scss
@@ -65,6 +65,7 @@
         position: absolute;
         left: 15px;
         bottom: 10px;
+        z-index: 5;
 
         span {
           display: block;
@@ -76,6 +77,7 @@
 
       &-result {
         position: absolute;
+        z-index: 5;
         top: 0;
         right: 0px;
         height: 120px;
